--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    id "kotlin-kapt"
 }
 
 android {
@@ -35,6 +36,10 @@ android {
 }
 
 dependencies {
+    //Room
+    implementation libs.room.runtime
+    kapt libs.room.compiler
+    implementation libs.room.ktx
 
     implementation(libs.androidx.navigation.fragment.ktx)
     implementation(libs.androidx.navigation.ui.ktx)
