--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    id "kotlin-kapt"
 }
 
 android {
@@ -34,6 +35,15 @@ android {
 dependencies {
 
     implementation(project(":domain"))
+
+    //Room
+    implementation libs.room.runtime
+    kapt libs.room.compiler
+    implementation libs.room.ktx
+
+    implementation(libs.dagger)
+    kapt libs.dagger.compiler
+    implementation(libs.inject)
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
