--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ navigationSafeArgsGradlePlugin = "2.9.7"
 viewmodel = "2.10.0"
 fragment-ktx = "1.8.9"
 navigation = "2.9.7"
+room_version = "2.8.4"
 
 [libraries]
 
@@ -33,6 +34,13 @@ fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref
 #Navigation
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+
+#Room
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version"}
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
+
+
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
