--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ viewmodel = "2.10.0"
 fragment-ktx = "1.8.9"
 navigation = "2.9.7"
 room_version = "2.8.4"
+flexbox_version = "3.0.0"
+hilt_version = "2.44"
 
 [libraries]
 
@@ -40,7 +42,12 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version"}
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room_version"}
 
+#Flexbox
+flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref = "flexbox_version" }
 
+#Hilt
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt_version"}
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt_version"}
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -54,9 +61,10 @@ navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-
 
 
 [plugins]
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt_version" }
 kapt = {id = "org.jetbrains.kotlin.kapt", version.ref="kapt"}
 android-application = { id = "com.android.application", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version = "2.2.0" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 
