--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.cardemulator"
+        setProperty("archivesBaseName", "Эмуляция транспортных карт")
         minSdk 24
         targetSdk 36
         versionCode 1
